# specq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/config-examples/: chatgpt-plus-only.yaml  claude-max-only.yaml  hybrid-claude-chatgpt.yaml
specq/: __init__.py  aggregator.py  cli.py  compiler.py  config.py  dag.py  db.py  executor.py  git_ops.py  models.py  notifier.py  pipeline.py  scanner.py  scheduler.py  voter.py
specq/providers/: __init__.py  acp_agent.py  code_agent.py  text_gen.py
tests/: conftest.py  test_acp_agent.py  test_acp_text_gen.py  test_aggregator.py  test_cli.py  test_compiler.py  test_config.py  test_dag.py  test_db.py  test_executor.py  test_git_ops.py  test_models.py  test_notifier.py  test_pipeline.py  test_providers.py  test_scanner.py  test_scheduler.py  test_voter.py
