[project]
name = "specq"
version = "0.1.0"
description = "Spec Queue Orchestrator — DAG-based AI agent task runner"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.10",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "anyio>=4.4",
    "aiosqlite>=0.20",
]

[project.scripts]
specq = "specq.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
